apps/overlays/homarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr-ingress
  namespace: homarr
spec:
  ingressClassName: traefik
  rules:
    - host: homarr.myfri09.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homarr
                port:
                  number: 7575
